# nanopub

./: .coveragerc  .gitignore  .howfairis.yml  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  Untitled.ipynb  blog_post.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_profile.py  sitemap.xml  tox.ini
.github/workflows/: azure-devops-sync.yml  build.yml  cffconvert.yml  nanopub.yml  pypi.yml
docs/: conf.py  development.md  fetching.md  index.md  index.rst  requirements.txt  searching.md  setup.md  what-are-nanopubs.md
docs/assets/: custom.css  fontawesome.min.js  solid.min.js
docs/getting-started/: development.md  setup.md  test-server.md  use-the-cli.md  what-are-nanopubs.md
docs/publishing/: controlling-subgraphs.md  legacy-publishing-nanopublications.md  profile.md  publish-nanopublications.md  publish-with-cli.md  publishing-nanopublications.md  retraction.md  setting-subgraphs.md  templates.md  using-new-nanopublication-object.md  using-publication-namespace.md
docs/reference/: client.md  client.rst  config.md  namespaces.md  namespaces.rst  nanopub.md  profile.md  publication.rst  templates.md
docs/searching/: fetching.md  searching.md
examples/: DATA_SIG_handson_session.ipynb  blog_post_code.ipynb  claim_retract.ipynb  claiming_and_retracting.ipynb  controlling-subgraphs.ipynb  create_and_publish.ipynb  create_and_publish_fdo.ipynb  create_and_validate_fdo_exp.ipynb  create_validate_update_fdo_nanopub.ipynb  fdo_nanopub_operations.ipynb  publishing_and_retracting.ipynb  searching.ipynb  understanding_blank_nodes.ipynb  using_publication_namespace.ipynb
getting-started/development/: index.html
getting-started/setup/: index.html
getting-started/test-server/: index.html
getting-started/use-the-cli/: index.html
getting-started/what-are-nanopubs/: index.html
lib/: LICENSE
nanopub/: .profile.py.swp  .setup_profile.py.swp  __init__.py  __main__.py  client.py  config.py  constants.py  definitions.py  fdo_metadata.py  fdo_nanopub.py  fdo_ops.py  java_wrapper.py  models.py  namespaces.py  nanopub.py  nanopub_conf.py  nanopub_config.py  nanopub_index.py  nanopub_introduction.py  nanopublication.py  np  profile.py  publication.py  setup_nanopub_profile.py  setup_profile.py  sign_utils.py  signer.py  utils.py
nanopub/fdo/: __init__.py  fdo_nanopub.py  fdo_record.py  retrieve.py  update.py  utils.py  validate.py
nanopub/nanopub-java/: nanopub-java
nanopub/templates/: __init__.py  nanopub_claim.py  nanopub_index.py  nanopub_introduction.py  nanopub_retract.py  nanopub_update.py
nanopub/trustyuri/: CheckFile.py  ModuleDirectory.py  RunBatch.py  TrustyUriModule.py  TrustyUriResource.py  TrustyUriUtils.py
nanopub/trustyuri/file/: FileHasher.py  FileModule.py  ProcessFile.py
nanopub/trustyuri/rdf/: HashAdder.py  RdfHasher.py  RdfModule.py  RdfPreprocessor.py  RdfTransformer.py  RdfUtils.py  StatementComparator.py  TransformRdf.py  __init__.py
publishing/profile/: index.html
publishing/publish-nanopublications/: index.html
publishing/retraction/: index.html
publishing/setting-subgraphs/: index.html
publishing/templates/: index.html
publishing/using-publication-namespace/: index.html
reference/client/: index.html
reference/config/: index.html
reference/namespaces/: index.html
reference/nanopub/: index.html
reference/profile/: index.html
reference/templates/: index.html
scripts/: all.sh  dev.py  dev.sh  docs-build.sh  docs-serve.sh  docs.sh  format.sh  html-cov-test.sh  install.sh  lint.sh  nanopub-java  nanopub-java.bat  notebooks.sh  run.py  run.sh  test.sh
search/: search_index.json
searching/fetching/: index.html
searching/searching/: index.html
tests/: .test_profile.py.swp  conftest.py  java_wrapper.py  test_cli.py  test_client.py  test_fdo_nanopub.py  test_fdo_ops.py  test_java_wrapper.py  test_nanopub.py  test_nanopublication.py  test_profile.py  test_publication.py  test_setup_profile.py  test_sign_utils.py  test_signer.py  test_testsuite.py
tests/resources/: id_rsa  id_rsa.pub  many_bnodes_with_annotations.json  nanopub_sample1.trig  nanopub_sample_signed.trig  nanopub_sample_signed.trig.signed.trig  nanopub_sample_unsigned.trig
tests/testsuite/invalid/signed/: nanopub-index1.trig  simple1-invalid-dsa.trig  simple1-invalid-rsa.trig
tests/testsuite/invalid/trusty/: trusty1.trig
tests/testsuite/transform/signed/rsa-key1/: simple1.out.code  simple1.out.trig
tests/testsuite/transform/trusty/: aida1.out.code  aida1.out.trig  signed.aida1.in.trig  simple1.out.code  simple1.out.trig
tests/testsuite/valid/plain/: bnode2.trig  proteinatlas-16-1.trig  signed.simple1.trig  signed.simple2.trig  simple2.trig
tests/testsuite/valid/signed/: Darwin-Core-schema-resource.trig  EduSocDL-community.trig  nanobench_hasRead-template-v5.trig  nanobench_new-individual-template-v3.trig  nanobench_somebodyElse-prtemplate.trig  nanopub-index1.trig  nanopub-python1.trig  physician-suicide-1.trig  python-step-1.trig  simple1-signed-dsa.trig  simple1-signed-rsa.trig  workflow-1.trig
tests/testsuite/valid/trusty/: disgenet-v2.1.0.0-1.trig  disgenet-v3.0.0.0-1.trig  fair-definition-1.trig  fair-maturity-1.trig  fip-ontology-1.trig  generif-aida-1.trig  generif-aida-index.trig  genuine-sempub-1.trig  genuine-sempub-2.trig  globalbioticinteractions_aps-turfgrasses-1.trig  globalbioticinteractions_bees-1.trig  globalbioticinteractions_inaturalist-1.trig  globalbioticinteractions_raymond-1.trig  liddi-1.trig  linkflows-article-1.trig  linkflows-review-1.trig  nextprot-1.trig  openbel-1.trig  provcorp-definition-1.trig  provcorp-parc-annotation-1.trig  wd-metabolite-species-1.trig  wikipathways-complexes-20170510-1.trig  wikipathways-interactions-20170510-1.trig  wikipathways-pathwayParticipation-20170510-1.trig
