[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanopub"
description = "Python client for Nanopublications"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Robin Richardson", email = "r.richardson@esciencecenter.nl" },
    { name = "Djura Smits" },
    { name = "Sven van den Burg" },
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
keywords = [
    "Nanopublication",
    "RDF",
    "Linked Data",
    "Publishing"
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]

dependencies = [
    "rdflib <7.0.0,>=6.0.0",
    "requests",
    "click >=7.1.2",
    "yatiml",
    "pycryptodome >=3.15.0",
]

[project.scripts]
np = "nanopub.__main__:cli"

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "pytest-cov >=2.12.0,<4.0.0",
    "coveralls",
    "mypy ==0.971",
    "black == 22.8.0",
    "isort >=5.0.6,<6.0.0",
    "flake8 >=3.8.3,<6.0.0",
    "Flake8-pyproject>=1.1.0.post0",
    "flaky",
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=8.2.7,<9.0.0",
    "mkdocstrings[python] >=0.18.1",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
    "jinja2 ==3.0.3",
]
dev = [
    "mypy ==0.971",
    "uvicorn[standard] >=0.12.0,<0.19.0",
    "pre-commit >=2.17.0,<3.0.0",
    "autoflake >=1.4.0,<2.0.0",
    "types-requests",
]


[project.urls]
Homepage = "https://github.com/fair-workflows/nanopub"
Documentation = "https://nanopub.readthedocs.io"
History = "https://github.com/fair-workflows/nanopub/releases"
Tracker = "https://github.com/fair-workflows/nanopub/issues"
Source = "https://github.com/fair-workflows/nanopub"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
  "test",
  "doc",
  "dev",
]
post-install-commands = [
  "pre-commit install",
]

[tool.hatch.envs.default.scripts]
dev = "./scripts/dev.sh"
test = "./scripts/test.sh"
docs = "./scripts/docs.sh"
format = "./scripts/format.sh"
lint = "./scripts/lint.sh"


# TOOLS
[tool.hatch.version]
path = "nanopub/_version.py"


[tool.isort]
line_length = 120
skip = ["nanopub/__init__.py"]
profile = "black"


[tool.coverage.run]
source = ["project"]
branch = true

[tool.coverage.report]
omit = ["nanopub/trustyuri/*", "tests/*"]


[tool.flake8]
max-complexity = 17
max-line-length = 120
per-file-ignores = [
    "__init__.py:F401",
]
ignore = [
    "E501", # line too long
    "E303", # too many blank lines
    "E301", # expected 1 blank lines found 0
    "W503", # line break before binary operator
]


[tool.mypy]
strict = false
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true
exclude = [ "nanopub/publication.py" ]


[tool.pytest.ini_options]
markers = [
    "no_rsa_key: mark a test as a test only run when there is no nanopub RSA key setup.",
]

# [tool.black]
# color = true
# line-length = 120
# target-version = ['py310']
# skip-string-normalization = true
